@@ -1,3 +1,7 @@
+2018-09-14  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftstring.c: Polished.
+
 2018-09-13  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[ftstring] Implement text carpeting mode.
